Aggiunta calibrazione offset Rimosso oscilloscopio bloccante Counter Oscilloscopio

--- a/DT5550ControlCenter/App.config
+++ b/DT5550ControlCenter/App.config
@@ -94,6 +94,9 @@
             <setting name="parRun" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="AFECalibration" serializeAs="String">
+                <value />
+            </setting>
         </DT5550ControlCenter.My.MySettings>
     </userSettings>
 </configuration>
