--- a/DT5550ControlCenter/DT5550ControlCenter.vbproj
+++ b/DT5550ControlCenter/DT5550ControlCenter.vbproj
@@ -108,6 +108,7 @@
     <Compile Include="ChooseCh.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ClassCalibration.vb" />
     <Compile Include="communication.vb" />
     <Compile Include="connection.Designer.vb">
       <DependentUpon>connection.vb</DependentUpon>
@@ -164,6 +165,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="OffsetCalibration.Designer.vb">
+      <DependentUpon>OffsetCalibration.vb</DependentUpon>
+    </Compile>
+    <Compile Include="OffsetCalibration.vb">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="pImmediate.Designer.vb">
       <DependentUpon>pImmediate.vb</DependentUpon>
@@ -242,6 +249,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OffsetCalibration.resx">
+      <DependentUpon>OffsetCalibration.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pImmediate.resx">
       <DependentUpon>pImmediate.vb</DependentUpon>
