--- a/DT5550ControlCenter/My Project/Settings.settings
+++ b/DT5550ControlCenter/My Project/Settings.settings
@@ -89,5 +89,8 @@
     <Setting Name="parRun" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="AFECalibration" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
