Addition of R5560 board

--- a/DT5550ControlCenter/App.config
+++ b/DT5550ControlCenter/App.config
@@ -97,6 +97,9 @@
             <setting name="AFECalibration" serializeAs="String">
                 <value />
             </setting>
+            <setting name="IP1" serializeAs="String">
+                <value />
+            </setting>
         </DT5550ControlCenter.My.MySettings>
     </userSettings>
 </configuration>
