--- a/DT5550ControlCenter/My Project/Settings.settings
+++ b/DT5550ControlCenter/My Project/Settings.settings
@@ -92,5 +92,8 @@
     <Setting Name="AFECalibration" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="IP1" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
