modifiche polarità e offset per modifica firmwrae mca 2021.10.25, salvataggio multiple ip r5560se board, migliorato flag checkbox - 2021.10.26

--- a/DT5550ControlCenter/App.config
+++ b/DT5550ControlCenter/App.config
@@ -100,6 +100,9 @@
             <setting name="IP1" serializeAs="String">
                 <value />
             </setting>
+            <setting name="IPs" serializeAs="String">
+                <value />
+            </setting>
         </DT5550ControlCenter.My.MySettings>
     </userSettings>
 </configuration>
