--- a/DT5550ControlCenter/My Project/Settings.settings
+++ b/DT5550ControlCenter/My Project/Settings.settings
@@ -95,5 +95,8 @@
     <Setting Name="IP1" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="IPs" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
