new setup, vs2022

--- a/DT5550ControlCenter/App.config
+++ b/DT5550ControlCenter/App.config
@@ -2,14 +2,15 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="DT5550ControlCenter.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="OpenHardwareReadoutSoftware.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="SciDigitizer.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
     <userSettings>
-        <DT5550ControlCenter.My.MySettings>
+        <OpenHardwareReadoutSoftware.My.MySettings>
             <setting name="JsnFile" serializeAs="String">
                 <value />
             </setting>
@@ -103,6 +104,101 @@
             <setting name="IPs" serializeAs="String">
                 <value />
             </setting>
-        </DT5550ControlCenter.My.MySettings>
+        </OpenHardwareReadoutSoftware.My.MySettings>
+        <SciDigitizer.My.MySettings>
+            <setting name="JsnFile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="folder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="parAcq" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="board1id" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="board2id" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="bBIAS" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="trMode" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="trLevel" serializeAs="String">
+                <value>5</value>
+            </setting>
+            <setting name="dDelay" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="trDelay" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="dDelay2" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="trDelay2" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="trHold" serializeAs="String">
+                <value>90</value>
+            </setting>
+            <setting name="prEn" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="prTime" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="iTime" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="blCor" serializeAs="String">
+                <value>4</value>
+            </setting>
+            <setting name="blOffset" serializeAs="String">
+                <value>25</value>
+            </setting>
+            <setting name="nf_b" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="dGain" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="cBoard" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="folderpos" serializeAs="String">
+                <value>c:\temp</value>
+            </setting>
+            <setting name="bLowRate" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="biasGainSettings" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="separateTresholdValues" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="bseparateThreshold" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SN" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="parRun" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="AFECalibration" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IP1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="IPs" serializeAs="String">
+                <value />
+            </setting>
+        </SciDigitizer.My.MySettings>
     </userSettings>
 </configuration>
