--- a/DT5550ControlCenter/OpenHardwareReadoutSoftware.vbproj
+++ b/DT5550ControlCenter/OpenHardwareReadoutSoftware.vbproj
@@ -6,12 +6,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D8533211-324F-4050-8AF7-B099843EE2C6}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>DT5550ControlCenter.My.MyApplication</StartupObject>
-    <RootNamespace>DT5550ControlCenter</RootNamespace>
-    <AssemblyName>DT5550ControlCenter</AssemblyName>
+    <StartupObject>OpenHardwareReadoutSoftware.My.MyApplication</StartupObject>
+    <RootNamespace>OpenHardwareReadoutSoftware</RootNamespace>
+    <AssemblyName>OpenHardwareReadoutSoftware</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>WindowsForms</MyType>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -22,7 +22,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>..\BIN\</OutputPath>
-    <DocumentationFile>DT5550ControlCenter.xml</DocumentationFile>
+    <DocumentationFile>OpenHardwareReadoutSoftware.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>DT5550ControlCenter.xml</DocumentationFile>
+    <DocumentationFile>OpenHardwareReadoutSoftware.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -157,6 +157,7 @@
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
