--- a/DT5550ControlCenter/packages.config
+++ b/DT5550ControlCenter/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DockPanelSuite" version="2.10.0" targetFramework="net452" />
-  <package id="MathNet.Numerics" version="4.4.0" targetFramework="net45" />
+  <package id="MathNet.Numerics" version="4.4.0" targetFramework="net45" requireReinstallation="true" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="OxyPlot.Core" version="1.0.0" targetFramework="net45" />
   <package id="OxyPlot.WindowsForms" version="1.0.0" targetFramework="net45" />
